# REST-API-client-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: LICENCE  pyproject.toml
{{ cookiecutter.project_name }}/test/: test_{{ cookiecutter.project_slug }}_lib.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: {{ cookiecutter.resource_name }}.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/handlers/: {{ cookiecutter.resource_name }}.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/models/: {{ cookiecutter.resource_name }}.py
